Ran with accessibility checker. Upped color contrast, and fixed 1 broken link

--- a/main.css
+++ b/main.css
@@ -291,7 +291,7 @@ template {
   --gray: #6c757d;
   --gray-dark: #343a40;
   --light-blue: #e8f3ec;
-  --primary: #05A6F0;
+  --primary: #0376ab;
   --secondary: #7832e2;
   --success: #81BC06;
   --info: #09ebaf;
@@ -420,12 +420,12 @@ sup {
   top: -.5em; }
 
 a {
-  color: #05A6F0;
+  color: #0376ab;
   text-decoration: none;
   background-color: transparent;
   -webkit-text-decoration-skip: objects; }
   a:hover {
-    color: #0376ab;
+    color: #01396e;
     text-decoration: underline; }
 
 a:not([href]):not([tabindex]) {
@@ -3499,7 +3499,8 @@ input[type="button"].btn-block {
   .nav-link:hover, .nav-link:focus {
     text-decoration: none; }
   .nav-link.disabled {
-    color: #6c757d; }
+    /* color: #6c757d;  */
+  }
 
 .nav-tabs {
   border-bottom: 1px solid #dee2e6; }
@@ -3512,12 +3513,13 @@ input[type="button"].btn-block {
     .nav-tabs .nav-link:hover, .nav-tabs .nav-link:focus {
       border-color: #e9ecef #e9ecef #dee2e6; }
     .nav-tabs .nav-link.disabled {
-      color: #6c757d;
+      /* color: #6c757d */
+      ;
       background-color: transparent;
       border-color: transparent; }
   .nav-tabs .nav-link.active,
   .nav-tabs .nav-item.show .nav-link {
-    color: #495057;
+    /* color: #495057; */
     background-color: #fff;
     border-color: #dee2e6 #dee2e6 #fff; }
   .nav-tabs .dropdown-menu {
@@ -3745,36 +3747,36 @@ input[type="button"].btn-block {
     display: none; }
 
 .navbar-light .navbar-brand {
-  color: rgba(0, 0, 0, 0.9); }
+  color: rgba(0, 0, 0, 1); }
   .navbar-light .navbar-brand:hover, .navbar-light .navbar-brand:focus {
-    color: rgba(0, 0, 0, 0.9); }
+    color: rgba(0, 0, 0, 1); }
 
 .navbar-light .navbar-nav .nav-link {
-  color: rgba(0, 0, 0, 0.5); }
+  color: rgba(0, 0, 0, 1); }
   .navbar-light .navbar-nav .nav-link:hover, .navbar-light .navbar-nav .nav-link:focus {
     color: rgba(0, 0, 0, 0.7); }
   .navbar-light .navbar-nav .nav-link.disabled {
-    color: rgba(0, 0, 0, 0.3); }
+    color: rgba(0, 0, 0, 1); }
 
 .navbar-light .navbar-nav .show > .nav-link,
 .navbar-light .navbar-nav .active > .nav-link,
 .navbar-light .navbar-nav .nav-link.show,
 .navbar-light .navbar-nav .nav-link.active {
-  color: rgba(0, 0, 0, 0.9); }
+  color: rgba(0, 0, 0, 1); }
 
 .navbar-light .navbar-toggler {
-  color: rgba(0, 0, 0, 0.5);
+  color: rgba(0, 0, 0, 1);
   border-color: rgba(0, 0, 0, 0.1); }
 
 .navbar-light .navbar-toggler-icon {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(0, 0, 0, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E"); }
 
 .navbar-light .navbar-text {
-  color: rgba(0, 0, 0, 0.5); }
+  color: rgba(0, 0, 0, 1); }
   .navbar-light .navbar-text a {
-    color: rgba(0, 0, 0, 0.9); }
+    color: rgba(0, 0, 0, 1); }
     .navbar-light .navbar-text a:hover, .navbar-light .navbar-text a:focus {
-      color: rgba(0, 0, 0, 0.9); }
+      color: rgba(0, 0, 0, 1); }
 
 .navbar-dark .navbar-brand {
   color: #fff; }
@@ -7434,7 +7436,7 @@ a.text-primary:hover, a.text-primary:focus {
   color: #027657 !important; }
 
 .text-secondary {
-  color: #B965A7 !important; }
+  color: #965388 !important; }
 
 a.text-secondary:hover, a.text-secondary:focus {
   color: #5f1cc5 !important; }
@@ -7458,10 +7460,10 @@ a.text-warning:hover, a.text-warning:focus {
   color: #cfb400 !important; }
 
 .text-danger {
-  color: #ea2f65 !important; }
+  color: #d91c48 !important; }
 
 .text-whitepaper {
-  color: #B965A7 !important; }
+  color: #965388 !important; }
 
 a.text-danger:hover, a.text-danger:focus {
   color: #d1154b !important; }
@@ -8753,10 +8755,10 @@ a, a:hover {
   transition: all .2s; }
 
 a {
-  color: #05A6F0; }
+  color: #0376ab; }
 
 a.text-dark:hover {
-  color: #0376ab !important; }
+  color: #01396e !important; }
 
 .c-pointer:hover {
   cursor: pointer; }
@@ -8940,25 +8942,25 @@ a.text-dark:hover {
               transform: rotate(45deg); } }
 
 .navbar-light .navbar-brand {
-  color: rgba(0, 0, 0, 0.9); }
+  color: rgba(0, 0, 0, 1); }
   .navbar-light .navbar-brand:hover, .navbar-light .navbar-brand:focus {
-    color: rgba(0, 0, 0, 0.9); }
+    color: rgba(0, 0, 0, 1); }
 
 .navbar-light .navbar-nav .nav-link {
-  color: rgba(0, 0, 0, 0.5); }
+  color: rgba(0, 0, 0, 1); }
   .navbar-light .navbar-nav .nav-link:hover, .navbar-light .navbar-nav .nav-link:focus {
-    color: rgba(0, 0, 0, 0.7); }
+    color: #0376ab; }
   .navbar-light .navbar-nav .nav-link.disabled {
-    color: rgba(0, 0, 0, 0.3); }
+    color: rgba(0, 0, 0, 1); }
 
 .navbar-light .navbar-nav .show > .nav-link,
 .navbar-light .navbar-nav .active > .nav-link,
 .navbar-light .navbar-nav .nav-link.show,
 .navbar-light .navbar-nav .nav-link.active {
-  color: rgba(0, 0, 0, 0.9); }
+  color: rgba(0, 0, 0, 1); }
 
 .navbar-light .navbar-toggler {
-  color: rgba(0, 0, 0, 0.5);
+  color: rgba(0, 0, 0, 1);
   border-color: rgba(0, 0, 0, 0.1); }
 
 .navbar-light .navbar-toggler-icon {
@@ -9318,7 +9320,7 @@ article {
     margin-bottom: 2rem;
     font-style: italic;
     position: relative;
-    border-left: 5px solid #05A6F0; }
+    border-left: 5px solid #0376ab; }
 
   /* article:first-letter {
     float: left;
